<resources>
    <string name="app_name">Subscription Hisab</string>

    <string name="action_settings">Settings</string>
    <string name="nav_item_attachment">Attachment</string>
    <string name="nav_item_images">Images</string>
    <string name="nav_item_location">My Location</string>
    <string name="nav_sub_menu">Sub Menu</string>
    <string name="nav_sub_menu_item01">Sub Menu Item 1</string>
    <string name="nav_sub_menu_item02">Sub Menu Item 2</string>
    <string name="drawer_header_text">Drawer Header</string>
    <string name="second_activity_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consectetur diam id aliquam scelerisque. Donec ultrices lacus vel dignissim pharetra. Vivamus pharetra augue quis rhoncus placerat. Sed ultricies at risus non cursus. Nam rutrum leo nec placerat consectetur. Vestibulum feugiat eleifend diam, nec interdum augue tincidunt sit amet. Praesent feugiat est auctor lacus consectetur, vitae pellentesque dolor laoreet.</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="default_text">Please tap on + icon on the bottom to add some subscription</string>
    <string name="add_subscription">Add Subscription</string>
     <string name="subscription_name">Subscription Name</string>
    <string name="monthly_amount">Monthly Amount</string>
    <string name="per_subscription_amt">Per Subscription amount</string>
    <string name="enter_amount">Enter amount</string>
    <string name="instruction">Select subscription type: </string>

    <string-array name="once_twice">
        <item>Once a day</item>
        <item>Twice a day</item>
    </string-array>
</resources>